Wed Dec 19 16:34:05 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:

          Due to the change in Heartbeat timing from the commit
          Wed Dec  5 21:57:56 UTC 2012, need to make sure that the AckNack
          response to the initial Heartbeat (for handshaking) doesn't
          unnecessarily cause retransmisison of sample with sequence number 1.

Mon Dec 17 21:02:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:

          Fixed DataReader::delete_contained_entities().

        * tests/DCPS/ReadCondition/ReadConditionTest.cpp:

          Tested the above.

        * dds/DdsDcpsInfrastructure.idl:

          Fixed inconsistent QoS policy names that are also wrong in the DDS
          spec.  The correct names are obvious, so we'll deviate from the spec.

Fri Dec 14 23:23:38 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:

          Revised locking strategy for dealing with scheduling
          ACE timers: need to schedule the timer after releasing
          the datalink's mutex to avoid calling into the reactor
          with the mutex held.

Thu Dec 13 19:32:31 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/transport/framework/PacketRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Fixed some Coverity warnings.

Wed Dec 12 22:16:36 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Fixed leak of type name string when removing multitopic.
